Prevent a division by zero in Investment Cap Gains reports

When the sum of all buys in the reporting period was zero a division by
zero could happen

BUG: 445458
FIXED-IN: 5.1.3

(cherry picked from commit 16afce344c239ac7b1919dbff3d7f638ca4ac3cf)